<resources>
    <string name="app_name">Linkup</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="hintEmail">abc@gmail.com</string>
    <string name="hintPassword">* * * * * *</string>
    <string name="passwordHint">* * * * * *</string>
    <string name="emailHint">abc@gmail.com</string>
    <string name="passwordForget">Forget Password\n</string>
    <string name="submit">Submit</string>
    <string name="not_account">Don\'t have an account</string>
    <string name="signin">SignIn</string>
    <string name="login">Login</string>
    <string name="already">Already an account.</string>
    <string name="skip">Skip</string>
    <string name="skip_notify">some fields are not filled,you can skip for now</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="phoneNo">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">other</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="image">Image</string>
    <string name="cancel">Cancel</string>
    <string name="profileedit">Edit Profile</string>
    <string name="edit_personal">Edit Personal Information</string>
    <string name="logout">Log Out</string>
    <string name="password">Password</string>
    <string name="status">status</string>
    <string name="message">Message</string>
    <string name="vertical_dots"><![CDATA[&#8942]]></string>
    <string name="post">User Post</string>
    <string name="_10">10</string>
    <string name="like">Like</string>
    <string name="comment">Commen</string>
    <string name="delivered">Delivered</string>
    <string name="time">Time</string>
    <string name="dots_verticle">&#8942;</string>
    <string name="sipna_coet">SIPNA COET</string>
    <string name="from">from</string>
    <string name="linkuplogo">linkuplogo</string>
</resources>