<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:contentDescription="@string/app_name"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_profile"
            app:civ_border_color="@null" />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">
            <TextView
                android:id="@+id/senderMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/message"
                android:textColor="@color/black"
                android:background="@drawable/border1"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/delivered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivered"
                android:textAlignment="textEnd"
                android:visibility="gone"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/senderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="12sp" />
</LinearLayout>
