<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity6_createpost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350sdp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_camera" />
        <!--    android:scaleType="fitStart"-->
        <EditText
            android:id="@+id/editCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/username"/>

        <LinearLayout
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/buttonPost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>