<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity3_singin2">
    <TextView
        android:id="@+id/skip"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:gravity="end"
        android:text="@string/skip"/>

    <TextView
        android:id="@+id/notify"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/black"
        android:text="@string/skip_notify"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="visible"
        android:src="@drawable/icon_profile" />

    <LinearLayout
        android:id="@+id/layoutUsername"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:layout_gravity="center"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/username"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLength="25"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@null"
            android:focusable="true"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutName"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:layout_gravity="center"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/name"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:background="@null"
            android:focusable="true"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAbout"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:layout_gravity="center"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/about"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/editAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLength="25"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@null"
            android:focusable="true"
            android:textSize="19sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutMobile"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:layout_gravity="center"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/phoneNo"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/editMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLength="10"
            android:inputType="phone"
            android:textColor="@color/black"
            android:background="@null"
            android:focusable="true"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDOB"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="5dp">
        <TextView
            android:id="@+id/textDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dob" />
        <TextView
            android:id="@+id/editDOB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutGender"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/gender"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/resetData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/saveData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="20sp"/>
    </LinearLayout>



</LinearLayout>