<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2_signin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phone"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/border1"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/border1"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/border1"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/edit3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/border1"
        android:text="@string/signin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSubmit"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/already" />
        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/login" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:contentDescription="@string/linkuplogo"
        android:src="@drawable/linkup_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_130sdp"
        android:text="@string/app_name"
        android:textColor="@color/logo_color"
        android:textStyle="bold" />

</RelativeLayout>