<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userPost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfile"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_35sdp"
                app:civ_border_color="@color/black"
                android:layout_gravity="center"
                app:civ_border_width="0.5dp"
                android:src="@drawable/icon_profile" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:layout_marginStart="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:singleLine="true"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/postEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dots_verticle"
                android:textSize="30sp"
                android:gravity="top|end"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/icon_profile"
            android:contentDescription="@string/post" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgLike"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:contentDescription="@string/like"
                android:src="@drawable/alike"/>
            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_10"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginEnd="7dp"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/imgComment"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:contentDescription="@string/comment"
                android:src="@drawable/acomment"/>
            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_10"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/captionUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="bottom"
                android:textSize="16sp"
                android:text="@string/username"/>
            <TextView
                android:id="@+id/caption"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:textSize="15sp"
                android:text="@string/username"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

